docs: add JVM/sigrok platform docs, EXAMPLES.md, and memory category
AGENTS.md
- Add JVM (Java/Kotlin/Groovy) conventions section: transport interface,
  class structure for all three languages, Javadoc/KDoc/Groovydoc,
  JBang example and test patterns
- Add sigrok decoder section: file layout, decoder skeleton, annotation
  conventions, START REPEAT handling, .sr test captures
- Extend "Where things go" table with JVM driver/example paths and
  sigrok decoder paths
- Add JVM test path to tests table
- Add JVM/Java, JVM/Kotlin, JVM/Groovy, Sigrok commit labels

TESTING.md
- Add JVM (jbang) platform section with env-var config and run command
- Add sigrok (PulseView) platform section with manual verification steps
- Add JVM quick-start entry and note on no config file required
- Add JVM and sigrok templates to "Writing tests" section

EXAMPLES.md (new)
- Document example structure and run instructions for all platforms:
  Python (MicroPython/CircuitPython/Linux), C++ (Arduino/Zephyr/Linux
  GCC), Node.js, Node-RED, Rust, and JVM (Java/Kotlin/Groovy)

memory category
- Create placeholder directories with .gitkeep across specs/,
  datasheets/, Python, C++, Node.js, and Rust
- Add node-red-contrib-periph-memory package (index.js, package.json)
- Add "memory" to chip categories table in CLAUDE.md
- Add "Memory (EEPROM, Flash, FRAM, SRAM)" to new_chip.yml issue
  template dropdown

wiki submodule updated (Architecture, Contributing, Testing, Transports,
Adding-a-Chip, Home)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>